Initial commit: AI Career Counseling Tool - Complete implementation with performance optimizations

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
 # Dependencies
 node_modules/
-*/node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # Production builds
-/frontend/build
-/backend/dist
+/frontend/build/
+/backend/dist/
 
 # Environment variables
 .env
@@ -13,33 +15,41 @@ node_modules/
 .env.test.local
 .env.production.local
 
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
 # Logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-lerna-debug.log*
+logs/
+*.log
 
 # Runtime data
-pids
+pids/
 *.pid
 *.seed
 *.pid.lock
 
 # Coverage directory used by tools like istanbul
 coverage/
-*.lcov
-
-# nyc test coverage
-.nyc_output
+.nyc_output/
 
 # Dependency directories
 jspm_packages/
 
 # Optional npm cache directory
 .npm
-
-# Optional eslint cache
-.eslintcache
 
 # Optional REPL history
 .node_repl_history
@@ -51,7 +61,7 @@ jspm_packages/
 .yarn-integrity
 
 # dotenv environment variables file
-.env.test
+.env
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
@@ -67,7 +77,7 @@ jspm_packages/
 .vuepress/dist
 
 # Serverless directories
-.serverless/
+.serverless
 
 # FuseBox cache
 .fusebox/
@@ -78,17 +88,40 @@ jspm_packages/
 # TernJS port file
 .tern-port
 
-# IDE files
-.vscode/
-.idea/
-*.swp
-*.swo
+# Stores VSCode versions used for testing VSCode extensions
+.vscode-test
 
-# OS generated files
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
+# Temporary folders
+tmp/
+temp/
+
+# Editor directories and files
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Local database files
+*.sqlite
+*.db
+
+# Cache files
+.cache/
+*.cache
+
+# Test coverage
+coverage/
+.coverage
+
+# Profiling files
+*.prof
+
+# Bundle analysis
+bundle-report.html
+stats.json
+
+# Performance logs
+profile.txt
+isolate-*.log
