Major refactor: Fix TypeScript issues, enhance error handling, and improve AWS deployment docs
- Fixed TypeScript strictness issues and Jest configuration
- Enhanced analytics service with better error handling and null checks
- Added comprehensive AWS deployment and scaling strategy documentation
- Improved form component memoization to fix context loss issues
- Added authentication controllers and MongoDB service integration
- Enhanced security middleware and GDPR compliance utilities
- Updated frontend components with better error boundaries
- Fixed translation system and form validation improvements
- Added comprehensive test setup and Jest type definitions

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -12,10 +12,18 @@ OPENAI_MAX_TOKENS=2000
 OPENAI_TEMPERATURE=0.7
 OPENAI_TIMEOUT=30000
 
+# MongoDB Configuration
+MONGODB_URI=mongodb://localhost:27017/ai-career-counseling
+
 # Security Configuration
 JWT_SECRET=your_jwt_secret_here
+JWT_EXPIRES_IN=24h
 ENCRYPTION_KEY=your_encryption_key_here
 SESSION_SECRET=your_session_secret_here
+
+# Default Admin Account
+DEFAULT_ADMIN_EMAIL=admin@career-counseling.com
+DEFAULT_ADMIN_PASSWORD=Admin@123
 
 # Rate Limiting
 API_RATE_LIMIT=1000
