--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,16 +13,18 @@
     "@types/react-router-dom": "^5.3.3",
     "chart.js": "^4.5.0",
     "i18next": "^23.7.6",
+    "i18next-browser-languagedetector": "^8.2.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.5.0",
     "react-router-dom": "^6.30.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "dev": "react-scripts start",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "build:analyze": "npm run build && node scripts/analyze-bundle.js",
@@ -39,12 +41,7 @@
     "performance:monitor": "node -e \"console.log('Performance monitoring enabled in production build')\"",
     "serve:production": "npx serve -s build -l 3000"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
+
   "browserslist": {
     "production": [
       ">0.2%",
@@ -64,8 +61,8 @@
     "eslint": "^8.54.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "msw": "^1.3.2",
     "identity-obj-proxy": "^3.0.0",
-    "jest-transform-stub": "^2.0.0"
+    "jest-transform-stub": "^2.0.0",
+    "msw": "^2.10.5"
   }
 }
